# Quotation_Mini_Program

./: .env.example  .gitignore  Makefile  Project Structure.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
data/: sample_contract.yml
docs/: architecture.md  code_style.md  contributing.md
scripts/: ensure_tools.sh  seed_data.py
src/contractor/: cli.py  db.py  models.py
src/contractor/services/: converter.py  currency.py  render.py  reports.py  reports.py:Zone.Identifier  templates.py  versioning.py
src/contractor/utils/: paths.py
templates/latex/: base.tex  contract_basic_en.tex.j2  contract_basic_zh.tex.j2
tests/: test_cli.py  test_templates.py
